# super-simple-poll

./: Dockerfile  app.py  fly.toml  models.py  poll_service.py  pyproject.toml  requirements.txt  slack_service.py
attached_assets/: content-1747315638049.md
static/css/: styles.css
templates/: index.html
