[project]
name = "supersimplepoll"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "posthog>=4.0.1",
    "psycopg2-binary>=2.9.10",
    "slack-bolt>=1.23.0",
    "slack-sdk>=3.35.0",
]
